[gd_scene load_steps=12 format=3 uid="uid://c3yfks8k7m4r"]

[ext_resource type="PackedScene" uid="uid://c585fhwojxl1m" path="res://Scenes/Level/Entities/entity.tscn" id="1_c20vu"]
[ext_resource type="Script" path="res://Scenes/Level/Entities/Enemy/enemy_generic.gd" id="2_8nfkj"]
[ext_resource type="PackedScene" uid="uid://xy3cvpwdy828" path="res://Scenes/Level/Utility/hurt_box.tscn" id="4_la4l8"]
[ext_resource type="PackedScene" uid="uid://uhr6mtuisqm1" path="res://Scenes/Level/Utility/hit_box.tscn" id="5_t87tr"]
[ext_resource type="AudioStream" uid="uid://bi7t7cjthnhhc" path="res://Audio/SoundEffect/enemy_hit.ogg" id="6_v2rmy"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_452cb"]
radius = 6.0
height = 14.0

[sub_resource type="Animation" id="Animation_xfnyu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_w8hns"]
resource_name = "walk"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_regpg"]
_data = {
"RESET": SubResource("Animation_xfnyu"),
"walk": SubResource("Animation_w8hns")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7oa2k"]
size = Vector2(24, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_63f22"]
size = Vector2(18, 14)

[node name="Enemy" instance=ExtResource("1_c20vu")]
script = ExtResource("2_8nfkj")

[node name="Sprite2D" type="Sprite2D" parent="." index="0"]
scale = Vector2(0.75, 0.75)
hframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]
position = Vector2(1, 3)
shape = SubResource("CapsuleShape2D_452cb")

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="2"]
libraries = {
"": SubResource("AnimationLibrary_regpg")
}

[node name="HurtBox" parent="." index="3" instance=ExtResource("4_la4l8")]
collision_mask = 4
HurtBoxType = 1

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2(1, 1.5)
shape = SubResource("RectangleShape2D_7oa2k")

[node name="HitBox" parent="." index="4" instance=ExtResource("5_t87tr")]
collision_layer = 2

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2(1, 3)
shape = SubResource("RectangleShape2D_63f22")

[node name="snd_hit" type="AudioStreamPlayer2D" parent="." index="5"]
stream = ExtResource("6_v2rmy")
volume_db = -20.0

[connection signal="hurt" from="HurtBox" to="." method="_on_hurt_box_hurt"]

[editable path="HurtBox"]
[editable path="HitBox"]
